# insect-js

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT-SAAS.md  LICENSE  ONBOARDING.md  README.md  api.js  insect-engine.js  package-lock.json  package.json  vitest.config.js
.docs/: api-reference.md  architecture.md  production-readiness.md
.docs/todo/changelog/: _log.md
rust/: Cargo.toml  README.md
rust/src/: auth.rs  config.rs  contracts.rs  db.rs  engine.rs  fingerprint.rs  formatters.rs  lib.rs  main.rs  models.rs  observability.rs  request.rs  routes.rs  search.rs  transcript.rs
rust/tmp/: engine-output-release.txt
scripts/: bootstrap.sh  build-rust.ps1  build-rust.sh  create-api-key.sh  deploy-saas-host.sh  harvest-search.mjs  render-mcp-config.sh  run-rust.ps1  run-rust.sh  save-transcript.mjs  smoke-test.sh  start-api.sh  test-rust.ps1  test-rust.sh
server/: index.js
server/core/: contracts.js  engine.js  fingerprint.js  formatters.js  http-headers.js  request.js  search.js  youtube-transcript.js
server/db/: keys.js
server/middleware/: auth.js
server/observability/: logging.js  metrics.js
server/routes/: auth.js  engine.js  health.js  youtube-transcript.js
tests/: auth-middleware.test.js  cli.test.js  engine-integration.test.js  fingerprint.test.js  formatters.test.js  keys.test.js  mcp-api-client.test.js  mcp-stdio.test.js  observability-metrics.test.js  request.test.js  routes.test.js  youtube-transcript.test.js
