[package]
name = "insect-rs"
version = "1.0.0"
edition = "2024"
description = "Native Rust runtime for Insect"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
clap = { version = "4.5.53", features = ["derive"] }
headless_chrome = "1.0.21"
rand = "0.9.2"
regex = "1.12.2"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "native-tls"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "process", "rt-multi-thread", "signal", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
url = "2.5.7"

[dev-dependencies]
tempfile = "3.23.0"
